Review comments and layout tweaks

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -197,7 +197,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
 \end{itemize}
 
 \vspace*{\fill}
-\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/cerberi.png}
+\includegraphics[width=\linewidth, keepaspectratio]{\art/cerberi.png}
 \vspace*{\fill}
 
 \end{multicols*}
