--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -158,7 +158,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
 \end{itemize}
 
 \vspace*{\fill}
-\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/slayer.png}
+\includegraphics[width=\linewidth, keepaspectratio]{\art/slayer.png}
 \vspace*{\fill}
 
 \end{multicols*}
