--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -211,7 +211,7 @@ During this ``Inferno'' campaign scenario, the following rules apply:
 \end{itemize}
 
 \vspace*{\fill}
-\includegraphics[width=0.4\paperwidth, keepaspectratio]{\art/griffin.png}
+\includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
 \vspace*{\fill}
 
 \end{multicols*}
