--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 20:37+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -424,7 +424,7 @@ msgid ""
 msgstr ""
 "\\textbf{1 × Středový (VI--VII) Dílek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item \\mbox{1 × Středový Dílek Mapy Dračí Utopie (C1)}\n"
+"  \\item 1 × Dračí Utopie (C1)\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -448,7 +448,7 @@ msgid ""
 "and appears in the center field of the S4 Starting Map tile.\n"
 "\n"
 msgstr ""
-"Nepřátelský Hrdina je reprezentován jedním modelem Hrdiny Frakce Bašta podle vašeho výběru\n"
+"Nepřátelský Hrdina je reprezentován libovolným modelem Hrdiny Frakce Bašta\n"
 "a objeví se na středovém poli Startovního Dílku Mapy S4.\n"
 "\n"
 
@@ -655,16 +655,10 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
-"\\vspace*{\\fill}\n"
-"\\begin{center}\n"
-"\\includegraphics[width=0.3\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
-"\\end{center}\n"
-"\\vspace*{\\fill}\n"
-"\n"
 
 #. type: tikzpicture
 #: campaigns/inferno_devilish_plan.tex:177
