--- a/translations/inferno_steadwicks_fall.tex/cs.po
+++ b/translations/inferno_steadwicks_fall.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 17:35+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -834,7 +834,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/griffin.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/griffin.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
