--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 15:24+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-02 09:52+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -682,6 +682,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
 "\\textbf{10. kolo:}\n"
 "\\begin{itemize}\n"
 "  \\item Druhé armády zaútočí v tomto a následujícím kole. Připravte si obranu!\n"
@@ -793,7 +794,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/cerberi.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/cerberi.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
