--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 20:37+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -656,13 +656,13 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
 "\\vspace*{\\fill}\n"
 "\\begin{center}\n"
-"\\includegraphics[width=0.3\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
 "\\end{center}\n"
 "\\vspace*{\\fill}\n"
 "\n"
