[CS] Inferno Campaign - Devilish Plan (#84)
Co-authored-by: qwrtln <qwrtln@users.noreply.github.com>
Co-authored-by: Andrzej Wiącek <andrzej.wiacek@qwrtln.nl>

--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 20:37+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -315,7 +315,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armia Złotych Smoków:} Grupa Złotych Smoków, Grupa Jednorożców, Grupa Drzewców, Grupa Centaurów\n"
-"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9, Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na poziomie twojego Bohatera\\footnote{Zob. str. 35, ,,Tabela Trudności Pola'' w Księdze Zasad, aby uzyskać dalsze szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
+"  \\item \\textbf{Armia Ivora:} Garstka Elfów\\footnote{W Rundzie 9 Garstka Elfów w Armii Ivara zostaje wzmocniona do Grupy.}, Neutralna Armia na poziomie twojego Bohatera\\footnote{Zob. str. 35 ,,Tabela Trudności Pola'' w Księdze Zasad, aby poznać szczegóły na temat liczby Jednostek Neutralnych, które musisz dobrać dla tej Neutralnej Armii.}\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -392,8 +392,8 @@ msgid ""
 msgstr ""
 "\\textbf{3 × Daleki (II--III) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Inferno (wybierz spośród: F16--F18, \\#F10)\n"
-"  \\item 1 × Bastion (wybierz spośród: F10--F12)\n"
+"  \\item 2 × Inferno (wybierz z: F16--F18, \\#F10)\n"
+"  \\item 1 × Bastion (wybierz z: F10--F12)\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -423,9 +423,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\columnbreak\\textbf{1 × Centralny (VI--VII) Kafelek Mapy}\n"
+"\\textbf{1 × Centralny (VI--VII) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Centralny Kafelek ze Smoczą Utopią (C1)\n"
+"  \\item 1 × Kafelek ze Smoczą Utopią (C1)\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -656,16 +656,10 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
-"\\vspace*{\\fill}\n"
-"\\begin{center}\n"
-"\\includegraphics[width=0.3\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
-"\\end{center}\n"
-"\\vspace*{\\fill}\n"
-"\n"
 
 #. type: tikzpicture
 #: campaigns/inferno_devilish_plan.tex:177
