--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 20:15+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-01 19:22+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -501,8 +501,8 @@ msgid ""
 "model and appears on the center field of the S3 Starting Map tile.\n"
 "\n"
 msgstr ""
-"Wrogi Bohater Generał Kendal jest reprezentowany przez figurkę Bohatera Fakcji Zamku\n"
-"i pojawia się na środkowym polu Początkowego Kafelka Mapy S3.\n"
+"Wrogi Bohater Generał Kendal jest reprezentowany przez figurkę Bohatera Zamku\n"
+"i pojawia się na środkowym polu Początkowego Kafelka S3.\n"
 "\n"
 
 #. type: multicols*
@@ -513,8 +513,8 @@ msgid ""
 "and appears on (and owns) the Settlement field of the F3 Map tile.\n"
 "\n"
 msgstr ""
-"Szarżujący Bohater z Zamku jest reprezentowany przez figurkę Bohatera Fakcji Zamku\n"
-"i pojawia się na (i posiada) polu Osady Kafelka Mapy F3.\n"
+"Szarżujący Bohater z Zamku jest reprezentowany przez figurkę Bohatera Zamku\n"
+"i pojawia się na (i posiada) polu Osady Kafelka F3.\n"
 "\n"
 
 #. type: multicols*
@@ -525,8 +525,8 @@ msgid ""
 "and appears on (and owns) the Settlement field of the F10 Map tile.\n"
 "\n"
 msgstr ""
-"Szarżujący Bohater z Bastionu jest reprezentowany przez figurkę Bohatera Fakcji Bastionu\n"
-"i pojawia się na (i posiada) polu Osady Kafelka Mapy F10.\n"
+"Szarżujący Bohater z Bastionu jest reprezentowany przez figurkę Bohatera Bastionu\n"
+"i pojawia się na (i posiada) polu Osady Kafelka F10.\n"
 "\n"
 
 #. type: multicols*
@@ -537,8 +537,8 @@ msgid ""
 "and appears on (and owns) the Settlement field of the \\#F1 Map tile.\n"
 "\n"
 msgstr ""
-"Szarżujący Bohater z Fortecy jest reprezentowany przez figurkę Bohatera Fakcji Fortecy\n"
-"i pojawia się na (i posiada) polu Osady Kafelka Mapy \\#F1.\n"
+"Szarżujący Bohater z Fortecy jest reprezentowany przez figurkę Bohatera Fortecy\n"
+"i pojawia się na (i posiada) polu Osady Kafelka \\#F1.\n"
 "\n"
 
 #. type: multicols*
@@ -548,7 +548,7 @@ msgid ""
 "Place your Main Hero on the center field of the Inferno Starting S6 Map tile.\n"
 "\n"
 msgstr ""
-"Umieść swojego Głównego Bohatera na centralnym polu Początkowego Kafelka Mapy Inferno S6.\n"
+"Umieść swojego Bohatera Głównego na centralnym polu Początkowego Kafelka Inferno S6.\n"
 "\n"
 
 #. type: multicols*
@@ -559,8 +559,8 @@ msgid ""
 "on the Settlement field of the F2 Map tile. This Settlement produces no resources.\n"
 "\n"
 msgstr ""
-"Umieść swojego Bohatera Pomocniczego, reprezentowanego przez figurkę Bohatera Frakcji Lochów\n"
-"na polu Osady Kafelka Mapy F2. Ta Osada nie produkuje żadnych zasobów.\n"
+"Umieść swojego Bohatera Pomocniczego, reprezentowanego przez figurkę Bohatera Lochów\n"
+"na polu Osady Kafelka F2. Ta Osada nie produkuje żadnych zasobów.\n"
 "\n"
 
 #. type: multicols*
@@ -592,7 +592,7 @@ msgid ""
 "You lose your Faction Town on the S6 Map Tile.\n"
 "\n"
 msgstr ""
-"Stracisz swoje Miasto Frakcji na Kafelku Mapy S6.\n"
+"Stracisz swoje Miasto Frakcji na Kafelku S6.\n"
 "\n"
 
 #. type: multicols*
@@ -832,7 +832,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/griffin.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/griffin.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
