--- a/translations/inferno_devilish_plan.tex/cs.po
+++ b/translations/inferno_devilish_plan.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-02 20:37+0200\n"
+"POT-Creation-Date: 2024-08-03 16:19+0200\n"
 "PO-Revision-Date: 2024-07-04 10:47+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -121,6 +121,9 @@ msgid ""
 "{} {} {}Dungeons and Devils} \\addscenariosection[subsection]{1}{Inferno "
 "Campaign $-$ Dungeons and Devils}{1. A Devilish Plan}{\\images/firewall.png}"
 msgstr ""
+"\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} "
+"{} {} {}Kobky a Ďáblové} \\addscenariosection[subsection]{1}{Kampa\\v{n} "
+"Peklo $-$ Kobky a Ďáblové}{1. Ďábelský Plán}{\\images/firewall.png}"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:8
@@ -141,6 +144,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1243057664666238996/1243057664666238996}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Zdroj:} \\href{https://discord.com/channels/740870068178649108/1243057664666238996/1243057664666238996}{Archon Studios Discord}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:16
@@ -153,6 +158,12 @@ msgid ""
 "The Kreegans are fierce warriors; they will relish the slaughter.}\n"
 "\n"
 msgstr ""
+"\\textit{Velká populace elfů obývá jihovýchodní pobřeží Erathie.\n"
+"Zelení a zlatí draci, kteří jsou ve zdejším regionu původní, posilují svou vojenskou sílu.\n"
+"Než si podrobíme tento region a přesuneme naše síly do Steadwicku, musíme tyto draky zničit.\n"
+"Naši spojenci Kreegané z Eeofolu požádali o čest vést tuto misi.\n"
+"Kreegané jsou nelítostní válečníci; budou si ta jatka užívat.}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:18
@@ -173,6 +184,8 @@ msgid ""
 "This scenario plays out over 13 rounds.\n"
 "\n"
 msgstr ""
+"Tento scénář se hraje na 13 kol.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:24
@@ -231,6 +244,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item Skupina Rarášků\n"
+"  \\item Málo Magogů\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:46
@@ -244,6 +262,13 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Bonus:} Zvolte jednu z následujících možností:\n"
+"\\begin{itemize}\n"
+"  \\item Přidejte si kouzlo \\uv{Zabiják} do ruky\n"
+"  \\item Přidejte si Artefakt \\uv{Brnění Zázraků} do ruky\n"
+"  \\item Posilte Magogy a získejte 1 \\svg{valuables}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:48
@@ -264,6 +289,8 @@ msgid ""
 "\\textbf{Faction:} Rampart\n"
 "\n"
 msgstr ""
+"\\textbf{Frakce:} Bašta\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:52
@@ -272,6 +299,8 @@ msgid ""
 "\\textbf{Enemy Armies:}\n"
 "\n"
 msgstr ""
+"\\textbf{Nepřátelské Armády:}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:57
@@ -283,6 +312,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"  \\item \\textbf{Armáda Zlatých Draků:} Skupina Zlatých Draků, skupina Jednorožců, skupina Dendroidů, skupina Kentaurů\n"
+"  \\item \\textbf{Ivorova Armáda:} Málo Elfů\\footnote{V 9. kole je Málo Elfů v Ivorově armádě posíleno na Skupinu Elfů.}, Neutrální armáda na úrovni vašeho Hrdiny\\footnote{Viz strana 35, \\uv{Tabulka Obtížnosti Pole} v základních pravidlech, pro další podrobnosti o počtu Neutrálních Jednotek, které musíte dobrat pro tuto Neutrální Armádu.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:59
@@ -291,6 +325,8 @@ msgid ""
 "\\textbf{Ivor's Deck:} 1 × Might card, 2 × Magic card, 1 × Skill card\n"
 "\n"
 msgstr ""
+"\\textbf{Ivorův Balíček:} 1 × Karta Síly, 2 × Karta Magie, 1 × Karta Schopnosti\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
@@ -299,6 +335,8 @@ msgid ""
 "\\textbf{Ivor's Spell Deck:} 1 × Precision Spell card (it resolves on the first \\svg{unit_ranged} unit able to make a \\svg{unit_ranged} attack), 1 × Magic Arrow Spell card\n"
 "\n"
 msgstr ""
+"\\textbf{Ivorův Balíček Kouzel:} 1 × karta Kouzla Přesnosti (je použita na první \\svg{unit_ranged} jednotku schopnou útoku na dálku), 1 × karta Kouzla Magický Šíp\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:63
@@ -307,6 +345,8 @@ msgid ""
 "\\textbf{Ivor's Skill:} Archery Ability card (it always resolves its Basic effect)\n"
 "\n"
 msgstr ""
+"\\textbf{Ivorova Schopnost:} Karta Dovednosti Lukostřelba (vždy se použije její Základní Efekt)\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:65
@@ -331,6 +371,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{2 × Startovní (I) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 1 × Peklo (S6)\n"
+"  \\item 1 × Bašta (S4)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:79
@@ -343,6 +389,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{3 × Vzdálený (II--III) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item \\mbox{2 × Peklo (vyberte z: F16--F18, \\#F10)}\n"
+"  \\item 1 × Bašta (vyberte z: F10--F12)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:84
@@ -354,6 +406,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{2 × Blízký (IV--V) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 2 × Bašta (N7, N8)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:89
@@ -365,6 +422,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{1 × Středový (VI--VII) Dílek Mapy}\n"
+"\\begin{itemize}\n"
+"  \\item 1 × Dračí Utopie (C1)\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:91
@@ -386,6 +448,9 @@ msgid ""
 "and appears in the center field of the S4 Starting Map tile.\n"
 "\n"
 msgstr ""
+"Nepřátelský Hrdina je reprezentován libovolným modelem Hrdiny Frakce Bašta\n"
+"a objeví se na středovém poli Startovního Dílku Mapy S4.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:96
@@ -394,6 +459,8 @@ msgid ""
 "Place your Hero in the center field of the Inferno Starting Map tile.\n"
 "\n"
 msgstr ""
+"Umístěte svého Hrdinu na středové pole Startovního Dílku Peklo.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:100
@@ -402,6 +469,8 @@ msgid ""
 "Defeat the Enemy Hero and the Gold Dragons Armies.\n"
 "\n"
 msgstr ""
+"Porazte Nepřátelského Hrdinu a Armády Zlatých Draků.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:104
@@ -410,6 +479,8 @@ msgid ""
 "You lose one Combat encounter.\n"
 "\n"
 msgstr ""
+"Prohrajete jeden Boj.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:106
@@ -418,6 +489,8 @@ msgid ""
 "You fail to defeat the Enemy Hero and the Gold Dragon Armies by the end of the Round 13.\n"
 "\n"
 msgstr ""
+"Nepodaří se vám porazit Nepřátelského Hrdinu a Armády Zlatých Draků do konce 13. kola.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:116
@@ -432,6 +505,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{1. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Čtěte: \\uv{Naši podřízení si vedli dobře. Podařilo se jim vztyčit sopku\n"
+"    a postavit pevnost v řídce osídleném lese těsně za hranicemi Erathie.\n"
+"    Zatímco Pánové Kobek se podzemím blíží k erathijskému hlavnímu městu,\n"
+"    musíte udeřit na jejich spojence, elfy z AvLee.}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:124
@@ -446,6 +527,14 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{2. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Čtěte: \\uv{Královna Zlatých Draků je mocnou spojenkyní AvLee.\n"
+"    Musíte najít její doupě a zajistit její zánik, protože to výrazně oslabí\n"
+"    elfy a učiní je menší hrozbou pro naše plány na zničení Erathie.\n"
+"    Jděte hned a udělejte nám radost!}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:130
@@ -458,6 +547,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{9. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Málo Elfů z Ivorovy Armády je Posíleno na skupinu Elfů.\n"
+"    Ivorova Armáda také získává Vozík s Municí.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:135
@@ -469,6 +564,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{10. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Město Frakce Bašta, ve kterém sídlí Ivorova Armáda, získává Střílnu.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:140
@@ -480,6 +580,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{13. kolo:}\n"
+"\\begin{itemize}\n"
+"  \\item Na konci kola, pokud nejsou Nepřátelský Hrdina a Armády Zlatých Draků poraženi, je vše ztraceno -- prohráváte!\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:145
@@ -491,6 +596,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Když dokončíte scénář:}\n"
+"\\begin{itemize}\n"
+"  \\item Čtěte: \\uv{Gratulujeme! Dokončili jste svůj úkol zabít obávanou bestii zvítězili jste!}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:148
@@ -530,13 +640,22 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\begin{itemize}\n"
+"    \\item Váš Hrdina nezískává Zkušenosti po úrovni 5.\n"
+"    \\item Nepřátelský Hrdina se nepohybuje a čeká pouze ve svém Městě. Začíná se Zdmi a Bránou na jejich straně Desky Bojiště.\n"
+"    \\item Na Dílek Mapy N7 nelze vstoupit, dokud není Ivor poražen.\n"
+"    \\item Na lokaci Dračí Utopie bojuje váš Hrdina s Armádou Zlatých Draků.\n"
+"    \\item \\uv{Hradní Bránu} nelze postavit.\n"
+"    \\item Pokud váš Hrdina navštíví Obelisk, můžete Hledat (2) v balíčku Dovedností, Artefaktů nebo Kouzel.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:163
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
-"\\includegraphics[width=0.4\\paperwidth, keepaspectratio]{\\art/slayer.png}\n"
+"\\includegraphics[width=\\linewidth, keepaspectratio]{\\art/slayer.png}\n"
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
@@ -557,3 +676,14 @@ msgid ""
 "  \\node at (4.8, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Inferno}}}}};\n"
 "  \\node at (4.8, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Map Tiles}}}}};"
 msgstr ""
+"[remember picture, overlay]\n"
+"  \\node(bg)[anchor=center, yshift=37em, opacity=0.5] at (current page.south) {\n"
+"    \\includegraphics[width=0.85\\paperwidth, keepaspectratio]{\\art/fire_magic.png}\n"
+"  };\n"
+"  \\node(map)[anchor=center] at (current page.center) {\n"
+"    \\includegraphics[width=\\textwidth]{\\maps/inferno_devilish_plan.png}\n"
+"  };\n"
+"  \\node at (2,-6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N8}}}}};\n"
+"  \\node at (13, -6.5) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{N7}}}}};\n"
+"  \\node at (4.3, -17.6) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Mapové Dílky}}}}};\n"
+"  \\node at (4.3, -18.3) {\\large{{\\textbf{\\textcolor{darkcandyapplered}{Pekla}}}}};"
