--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -3,23 +3,22 @@
 
 \begin{multicols*}{2}
 
-Follow these suggestions, if you're not sure which scenario is the best for you.
+Follow these suggestions if you're not sure which scenario is best for you.
 
 \subsection*{Cooperative Mode}
 
-If you're new to the game and want to try \textbf{learning the rules}, try \pagelink{Emerald Island}{Emerald Island}.
-For a big adventure for \textbf{up to 6 players} with an epic battle at the end, try \pagelink{Titans' Strongold}{Titans' Stronghold}.
-For a more tatctical play for two players, try \textbf{Sentinels}{Sentinels}.
+If you're new to the game and want to try \textbf{learning the rules}, start with \pagelink{Emerald Island}{Emerald Island}.
+For a big adventure for \textbf{up to 6 players} with an epic battle at the end, try \pagelink{Titans' Stronghold}{Titans' Stronghold}.
+For more tactical play for two players, try \textbf{Sentinels}{Sentinels}.
 
 \subsection*{Clash Mode}
 
-If you'd like to play a 2 or 4 player ``capture the Grail'' scenario with interesting twists, try \pagelink{Bloody Grail}{Bloody Grail}.
-For an interesting boss fight for 3 or 3 players, choose \pagelink{The Hunt}{The Hunt}.
-To warrant an unavoidable epic battle between two players with a possible siege, play \pagelink{Dragoncurse Castle}{Dragoncurse Castle}.
+If you'd like to play a 2- or 4-player ``capture the Grail'' scenario with interesting twists, try \pagelink{Bloody Grail}{Bloody Grail}.
+For an exciting boss fight for 3 players, choose \pagelink{The Hunt}{The Hunt}.
+For an inevitable epic battle between two players with a possible siege, play \pagelink{Dragoncurse Castle}{Dragoncurse Castle}.
 
 \subsection*{Campaign}
 
-There is a 3-scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end, if you prefer solo play.
+There is a 3-scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.
 
 \end{multicols*}
-
