Fix non-scenario section header + art + po4a

--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = en_US
 \addsection{What to Play}{\images/forgetfulness.png}
 
-\begin{multicols*}{2}
+\begin{multicols}{2}
 
 Follow these suggestions if you're not sure which scenario is best for you.
 
@@ -21,4 +21,10 @@ For an inevitable epic battle between two players with a possible siege, play \p
 
 There is a 3-scenario Inferno \pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.
 
-\end{multicols*}
+\subsection*{Recommendations}
+
+For information regarding your play time, strategizing, and custom rules, checkout out \pagelink{Recommendations}{recommendations} at the and of this book.
+
+\end{multicols}
+
+\includegraphics[width=\linewidth]{\art/enchanter.jpg}
