--- a/metadata.tex
+++ b/metadata.tex
@@ -172,24 +172,26 @@
 
 %Create section heading with graphics. Argument one is heading name, argument two is picture to use on the left.
 \newcommand{\addsection}[2]{
-  \vspace*{-5em}
-  \hspace*{-1em}
+  \vspace*{-5.72em}
+  \hspace*{-1.3em}
   \makebox[0pt][l]{
   \raisebox{-\totalheight}[0pt][7pt]{
-    \begin{tikzpicture}
-      \draw (0, 0) node[inner sep=0] {\includegraphics[width=\linewidth, height=0.2\linewidth]{\layout/section_heading.jpg}};
-      \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#2}};
-    \end{tikzpicture}
+      \begin{tikzpicture}
+        \draw (0, 0) node[inner sep=0] (header){\makebox[\textwidth][c]{\includegraphics[width=1.06\linewidth, height=0.24\linewidth]{\layout/section_heading.png}}};
+        \draw (-6.2, 0) node {\includegraphics[width=0.125\textwidth]{#2}};
+      \end{tikzpicture}
     }
   }
-  \begin{fullwidth}[leftmargin=0.16\textwidth, outermargin=0.16\textwidth, innermargin=0.16\textwidth]
+  \begin{fullwidth}[leftmargin=0.2\textwidth]
     \begin{center}
-      \vspace*{\lang_header_adjustment}
+      \vspace{1em}
+      \vspace{\lang_header_adjustment}
       \section*{\sectionheadertext{#1}}
       \cleardoublepage\phantomsection\addcontentsline{toc}{section}{\protect\numberline{}#1}
     \end{center}
   \end{fullwidth}
   \vspace{1.75em}
+  \vspace{\lang_header_adjustment}
 }
 %End of create section heading.
 
