--- a/translations/what_to_play.tex/what_to_play.tex.pot
+++ b/translations/what_to_play.tex/what_to_play.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-04 22:13+0200\n"
+"POT-Creation-Date: 2024-08-04 22:16+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,7 +57,7 @@ msgstr ""
 msgid ""
 "If you're new to the game and want to try \\textbf{learning the rules}, start with \\pagelink{Emerald Island}{Emerald Island}.\n"
 "For a big adventure for \\textbf{up to 6 players} with an epic battle at the end, try \\pagelink{Titans' Stronghold}{Titans' Stronghold}.\n"
-"For more tactical play for two players, try \\textbf{Sentinels}{Sentinels}.\n"
+"For more tactical play for two players, try \\pagelink{Sentinels}{Sentinels}.\n"
 "\n"
 msgstr ""
 
