--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -14,7 +14,7 @@ For more tactical play for two players, try \pagelink{Sentinels}{Sentinels}.
 \subsection*{Clash Mode}
 
 If you'd like to play a 2- or 4-player ``capture the Grail'' scenario with interesting twists, try \pagelink{Bloody Grail}{Bloody Grail}.
-For an exciting boss fight for 3 players, choose \pagelink{The Hunt}{The Hunt}.
+For an exciting boss fight for 2-3 players, choose \pagelink{The Hunt}{The Hunt}.
 For an inevitable epic battle between two players with a possible siege, play \pagelink{Dragoncurse Castle}{Dragoncurse Castle}.
 
 \subsection*{Campaign}
