--- a/translations/what_to_play.tex/what_to_play.tex.pot
+++ b/translations/what_to_play.tex/what_to_play.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-04 22:16+0200\n"
+"POT-Creation-Date: 2024-08-04 22:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -74,7 +74,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "If you'd like to play a 2- or 4-player ``capture the Grail'' scenario with interesting twists, try \\pagelink{Bloody Grail}{Bloody Grail}.\n"
-"For an exciting boss fight for 3 players, choose \\pagelink{The Hunt}{The Hunt}.\n"
+"For an exciting boss fight for 2-3 players, choose \\pagelink{The Hunt}{The Hunt}.\n"
 "For an inevitable epic battle between two players with a possible siege, play \\pagelink{Dragoncurse Castle}{Dragoncurse Castle}.\n"
 "\n"
 msgstr ""
