--- a/translations/what_to_play.tex/cs.po
+++ b/translations/what_to_play.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-04 22:16+0200\n"
+"POT-Creation-Date: 2024-08-04 22:41+0200\n"
 "PO-Revision-Date: 2024-08-04 22:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -86,7 +86,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "If you'd like to play a 2- or 4-player ``capture the Grail'' scenario with interesting twists, try \\pagelink{Bloody Grail}{Bloody Grail}.\n"
-"For an exciting boss fight for 3 players, choose \\pagelink{The Hunt}{The Hunt}.\n"
+"For an exciting boss fight for 2-3 players, choose \\pagelink{The Hunt}{The Hunt}.\n"
 "For an inevitable epic battle between two players with a possible siege, play \\pagelink{Dragoncurse Castle}{Dragoncurse Castle}.\n"
 "\n"
 msgstr ""
@@ -131,4 +131,4 @@ msgstr ""
 msgid ""
 "For information regarding your play time, strategizing, and custom rules, checkout out \\pagelink{Recommendations}{recommendations} at the and of this book.\n"
 "\n"
-msgstr ""
+msgstr "\\vspace{-10em}\n"
