[CS] What to play

--- a/sections/what_to_play.tex
+++ b/sections/what_to_play.tex
@@ -28,3 +28,5 @@ For information regarding your play time, strategizing, and custom rules, checko
 \end{multicols}
 
 \includegraphics[width=\linewidth]{\art/enchanter.jpg}
+
+\vspace*{-1em}
