--- a/translations/title_page.tex/cs.po
+++ b/translations/title_page.tex/cs.po
@@ -34,6 +34,18 @@ msgid ""
 "    \\includegraphics[width=0.6\\paperwidth]{\\layout/cover_subtitle.png}\n"
 "  };"
 msgstr ""
+"[remember picture, overlay, inner sep=10pt]\n"
+"  \\iftoggle{noartbackground}{}{\n"
+"    \\node(cover)[anchor=center] at (current page.center) {\n"
+"      \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/cover.jpg}\n"
+"    };\n"
+"  }\n"
+"  \\node(title)[minimum width = \\paperwidth, anchor=center, yshift=\\dimexpr-10em\\relax] at (current page.north) {\n"
+"    \\includegraphics[width=0.6\\paperwidth]{\\layout/cover_title.png}\n"
+"  };\n"
+"  \\node(subtitle)[anchor=center, yshift=12em] at (current page.south) {\n"
+"    \\includegraphics[width=0.5\\paperwidth]{translations/art/cs/cover_subtitle.png}\n"
+"  };"
 
 #.  Render phantom SVGs before their use in tabular env
 #. type: Plain text
