[PL] What to play + fixed CS hyperlinks

--- a/translations/what_to_play.tex/cs.po
+++ b/translations/what_to_play.tex/cs.po
@@ -64,9 +64,9 @@ msgid ""
 "For more tactical play for two players, try \\pagelink{Sentinels}{Sentinels}.\n"
 "\n"
 msgstr ""
-"Pokud jste ve hře noví a chcete \\textbf{se naučit pravidla}, začněte se \\pagelink{Emerald Island}{Smaragdovým Ostrovem}.\n"
-"Pro velké dobrodružství pro \\textbf{až 6 hráčů} s epickou bitvou na konci zkuste \\pagelink{Titans' Stronghold}{Pevnost Titánů}.\n"
-"Pro takticky zaměřenou hru pro dva hráče zkuste \\pagelink{Sentinels}{Strážce}.\n"
+"Pokud jste ve hře noví a chcete \\textbf{se naučit pravidla}, začněte se \\pagelink{Smaragdový Ostrov}{Smaragdovým Ostrovem}.\n"
+"Pro velké dobrodružství pro \\textbf{až 6 hráčů} s epickou bitvou na konci zkuste \\pagelink{Pevnost Titánů}{Pevnost Titánů}.\n"
+"Pro takticky zaměřenou hru pro dva hráče zkuste \\pagelink{Strážci}{Strážce}.\n"
 "\n"
 
 #. type: multicols
@@ -88,9 +88,9 @@ msgid ""
 "For an inevitable epic battle between two players with a possible siege, play \\pagelink{Dragoncurse Castle}{Dragoncurse Castle}.\n"
 "\n"
 msgstr ""
-"Pokud byste chtěli hrát scénář \\uv{ukořistění Grálu} pro 2 nebo 4 hráče se zajímavými zvraty, zkuste \\pagelink{Bloody Grail}{Krvavý Grál}.\n"
-"Pro vzrušující boj s bossem pro 2--3 hráče si vyberte\\pagelink{The Hunt}{Lov}.\n"
-"Pro nevyhnutelnou epickou bitvu mezi dvěma hráči s možným obléháním hrajte \\pagelink{Dragoncurse Castle}{Hrad Dračí Kletby}.\n"
+"Pokud byste chtěli hrát scénář \\uv{ukořistění Grálu} pro 2 nebo 4 hráče se zajímavými zvraty, zkuste \\pagelink{Krvavý Grál}{Krvavý Grál}.\n"
+"Pro vzrušující boj s bossem pro 2--3 hráče si vyberte \\pagelink{Lov}{Lov}.\n"
+"Pro nevyhnutelnou epickou bitvu mezi dvěma hráči s možným obléháním hrajte \\pagelink{Hrad Dračí Kletby}{Hrad Dračí Kletby}.\n"
 "\n"
 
 #. type: multicols
@@ -110,7 +110,7 @@ msgid ""
 "There is a 3-scenario Inferno \\pagelink{1. A Devilish Plan}{Dungeons and Devils} Campaign at the end if you prefer solo play.\n"
 "\n"
 msgstr ""
-"Pokud preferujete sólo hru, tak na konci najdete 3-scenářovou kampaň frakce Peklo -- \\pagelink{1. A Devilish Plan}{Kobky a Ďáblové}.\n"
+"Pokud preferujete sólo hru, tak na konci najdete 3-scenářovou kampaň frakce Peklo -- \\pagelink{1. Ďábelský Plán}{Kobky a Ďáblové}.\n"
 "\n"
 
 #. type: multicols
@@ -130,5 +130,5 @@ msgid ""
 "For information regarding your play time, strategizing, and custom rules, checkout out \\pagelink{Recommendations}{recommendations} at the and of this book.\n"
 "\n"
 msgstr ""
-"Pro informace týkající se herní doby, strategie a vlastních pravidel, se podívejte na \\pagelink{Recommendations}{Doporučení} na konci této knihy.\n"
+"Pro informace týkající se herní doby, strategie a vlastních pravidel, se podívejte na \\pagelink{Doporučení}{Doporučení} na konci této knihy.\n"
 "\n"
