Add layout and language fixes

--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -200,7 +200,7 @@ msgid ""
 "During combat with Neutral Units in clash scenarios, if a player decides to deploy their Units only on one half (left or right) of the battle board, the player positioning the Neutral Units must do the same.\n"
 "\n"
 msgstr ""
-"Podczas walki z Neutralnymi Jednostkami w trybie starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) planszy walki, gracz rozmieszczający Neutralne Jednostki musi postąpić tak samo.\n"
+"Podczas walki z Jednostkami Neutralnymi w trybie starcia, jeśli gracz zdecyduje się rozmieścić swoje Jednostki tylko na jednej połowie (lewej lub prawej) planszy walki, gracz rozmieszczający Jednostki Neutralne musi postąpić tak samo.\n"
 "\n"
 
 #. type: multicols
@@ -338,7 +338,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Decydując, który budynek wybudować w swoim mieście, szczególnie na początku gry, \\textit{zazwyczaj} najlepiej jest priorytetowo traktować Jednostki ponad Ratusz, Cytadelę, Gildie Magów lub inne budynki specyficzne dla frakcji.\n"
+"  \\item Decydując, który budynek wybudować w swoim mieście, szczególnie na początku gry, \\textit{zazwyczaj} najlepiej jest priorytetowo traktować Jednostki ponad Ratusz, Cytadelę, Gildię Magów lub inne budynki specyficzne dla frakcji.\n"
 "  \\item Jeśli nie jesteś pewien, które Zaklęcie, Artefakt lub Zdolność wybrać, priorytetowo traktuj te, które pomagają w przeszukiwaniu talii.\n"
 "    Obejmuje to karty, które pozwalają ci dobierać karty lub odzyskiwać karty ze stosu kart odrzuconych.\n"
 "  \\item Staraj się unikać zużywania Punktów Ruchu Bohatera Głównego na akcje, które może wykonać Bohater Pomocniczy, takie jak obracanie Kafelków Mapy, odwiedzanie Młynów Wodnych i tym podobne.\n"
