--- a/translations/recommendations.tex/pl.po
+++ b/translations/recommendations.tex/pl.po
@@ -212,8 +212,8 @@ msgid ""
 "See examples that follow.\n"
 "\n"
 msgstr ""
-"Rozmieszczanie Neutralnych Jednostek daleko od siebie tylko sprawia, że drugi gracz marnuje Punkty Ruchu, co spowalnia grę.\n"
-"Wyjątek od tej zasady stanowi sytuacja, gdy należy rozmieszczać trzy Neutralne \\svg{unit_ground} lub \\svg{unit_flying} Jednostki, ponieważ wszystkie muszą trafić do pierwszej linii.\n"
+"Rozmieszczanie Jednostek Neutralnych daleko od siebie tylko sprawia, że drugi gracz marnuje Punkty Ruchu, co spowalnia grę.\n"
+"Wyjątek od tej zasady stanowi sytuacja, gdy należy rozmieszczać trzy Jednostki Neutralne \\svg{unit_ground} lub \\svg{unit_flying}, ponieważ wszystkie muszą trafić do pierwszej linii.\n"
 "Zobacz następujące przykłady.\n"
 "\n"
 
@@ -255,7 +255,7 @@ msgstr ""
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
 "    \\centering\n"
 "    \\includegraphics[width=\\linewidth]{\\examples/battle_good.png}\n"
-"    \\caption[good protected]{\\textit{Neutralne Jednostki są rozmieszczone prawidłowo.}}\n"
+"    \\caption[good protected]{\\textit{Jednostki Neutralne są rozmieszczone prawidłowo.}}\n"
 "  \\end{minipage}\n"
 "  \\hfill\n"
 "  \\begin{minipage}[t]{0.44\\textwidth}\n"
