--- a/coops/barrow_down.tex
+++ b/coops/barrow_down.tex
@@ -17,7 +17,7 @@ This scenario is played over 12-13 rounds.
 \textbf{Player Count:} 1
 
 \textbf{Starting Resources:}\par
-\resources{10}{2}{20}
+\resources{10}{2}{0}
 
 \textbf{Starting Income:}\par
 \resources{15}{2}{1}
@@ -52,14 +52,24 @@ if AI army kill you, you lost.
   \item At the beginning of turn 6 and 10, choose one tile without hero, remove all black cube on it.
 \end{itemize}
 
+
+\subsection*{\MakeUppercase{Alternative Rules}}
+\begin{itemize}
+    \item This scenario can be long to play! If you want a short play, fight the ghostly army only at end of resource rounds.
+\end{itemize}
+
 \subsection*{\MakeUppercase{Additional Rules}}
     \begin{itemize}
       \item Whenever a player visits an Obelisk, that player rolls one treasure die and one resource die, and resolves one of them.
-      \item After defeating a level VII neutral army, in addition of resolving the tile don't make the turn 13 battle
+      \item After defeating a level VII neutral army, in addition of resolving the tile don't make the turn 13 battle.
+      \item If level VII as been beat the turn 13, the last fight still takes place.
       \item Whenever a player visits an Redwood Observatory, that player can place a map tile from their own supply of tiles OR rotate one tile without hero.
       \item After the end of EACH turn, a ghostly army attack you, see the AI rule book to know the units and cards AI use. (don't forget walls
       and arrows tower turn 7 and more.)
-      \item At the start of battle versus ghostly army, you can keep your hand or draw again, like at the start of a round. Also reset your crowns.
+      \item At the start of battle versus ghostly army, you can keep your hand or draw again (But player can't discard any card at this time), like at the start of a round. Also reset your crowns.
+      \item For effect with "in each player's turn" you can use it again in battle versus ghostly army.
+      \item Player can't use income card in battle versus ghostly army.
+      \item player cannot revert any change in unit AI deck. (for example if the player choose few elve, he must fight it each turn a few bronze are in AI army.)
       \item You have not limited of round for fighting ghostly army.
       \item At the end of this battle, if you are not defeated, resurrect all troop engaged as if no battle had ever taken place. (you can use cube of another faction to track if unit are pack at the start).
     \end{itemize}
